# prog_homework

./: CMakeLists.txt
final/: task_1.c
final2/: task_1.c  task_2.c  task_4.c
homework2/: map.c  map.h  task_1.c
homework2/sources/: text.txt
homework_1/: task_1.c  task_2.c  task_3.c  task_4.c  task_5.c
homework_2/: task_1.c  task_2.c
homework_2/sources/: dict.csv
homework_3/: task_1.c  task_2.c  task_3.c
homework_4/: task_1.c  task_2.md
homework_5/: task_1.c
homework_7/: task_1.c
homework_8/: task_2.c
retest_1/: task_1.c  task_2.c  task_3.c
test_1/: task_1.c
test_2/: task_1.c  task_2.c
